Override java opts from geoserver.env variable